...

    <!-- Constraint Layout -->
    <androidx.constraintlayout.widget.ConstraintLayout style="@style/RemindersFragment.ConstraintLayout">

      <!-- Reminders RecyclerView -->
      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/remindersRecyclerView"
        style="@style/RemindersFragment.RecyclerView"
        android:liveData="@{viewModel.remindersList}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

      <!-- Add Reminders Button -->
      <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addReminderFAB"
        style="@style/RemindersFragment.RemindersButton"
        android:contentDescription="@string/button_text_add_reminder"
        app:fabSize="normal"
        app:layout_anchor="@id/remindersRecyclerView"
        app:layout_anchorGravity="bottom|right|end"
        app:layout_constraintBottom_toBottomOf="parent"
...
