<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>
    <variable
        name="viewModel"
        type="com.udacity.project4.locationreminders.savereminder.SaveReminderViewModel" />
  </data>

  <!-- Constraint Layout -->
  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraint_layout_save_reminder"
    style="@style/SaveReminderFragment.ConstraintLayout">

    <!-- Reminder Title -->
    <EditText
      android:id="@+id/reminderTitle"
      style="@style/SaveReminderFragment.ReminderTitle"
      android:autofillHints="Title"
      android:hint="@string/hint_reminder_title"
      android:inputType="text"
      android:text="@={viewModel.reminderTitle}"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <!-- Reminder Description -->
    <EditText
      android:id="@+id/reminderDescription"
      style="@style/SaveReminderFragment.ReminderDescription"
      android:autofillHints="Description"
      android:hint="@string/hint_reminder_desc"
      android:inputType="text"
      android:text="@={viewModel.reminderDescription}"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/reminderTitle" />

    <!-- Reminder Location Label -->
    <TextView
      android:id="@+id/selectLocation"
      style="@style/SaveReminderFragment.ReminderLocationLabel"
      android:contentDescription="@string/text_desc_select_location"
      app:drawableLeftCompat="@drawable/ic_location"
      app:drawableStartCompat="@drawable/ic_location"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/reminderDescription" />

    <!-- Reminder Location -->
    <TextView
      android:id="@+id/selectedLocation"
      style="@style/SaveReminderFragment.ReminderLocation"
      android:text="@{viewModel.reminderSelectedLocationStr}"
      app:layout_constraintBottom_toBottomOf="@id/selectLocation"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="@id/selectLocation"
      tools:text="Location" />

    <!-- Save Button -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/saveReminder"
      style="@style/SaveReminderFragment.SaveReminderButton"
      android:contentDescription="@string/text_desc_save_reminder"
      android:fadeVisible="@{!viewModel.showLoading.booleanValue()}"
      app:fabSize="normal"
      app:layout_anchorGravity="bottom|right|end"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent" />

    <!-- Progress Bar -->
    <ProgressBar
      android:id="@+id/progressBar"
      style="@style/SaveReminderFragment.ProgressBar"
      android:fadeVisible="@{viewModel.showLoading.booleanValue()}"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
