...
  <!-- Error strings -->
  <string name="geofence_unknown_error">Unknown error: the Geofence service is not available now.</string>
  <string name="geofence_not_available">Geofence service is not available now. Go to Settings>Location>Mode and choose High accuracy.</string>
  <string name="geofence_too_many_geofences">Your app has registered too many geofences.</string>
  <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call.</string>
  <string name="error_adding_geofence">Error Happened, Can\'t Add Geofence</string>
  <string name="err_enter_title">Please enter title</string>
  <string name="err_select_location">Please select location</string>
  <string name="error_last_location_null">We were unable to automatically retrieve your location. This can happen if you\'ve recently disabled location services. \n\nPlease tap the location button to try again.</string>
  <string name="geofences_null_or_empty">Warning: No Geofence Trigger Found! Abort mission!</string>
  <!-- Authentication Screen -->
  <string name="the_reminders_logo">The Reminders logo.</string>
  <string name="login_button_text">Login</string>
  <!-- Reminders Screen -->
...
